--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             </a>
             <div class="socials">
                 <ul class="social-icons">
-                    <li><a class="linkedin" aria-label="LinkedIn" href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a class="github" aria-label="GitHub" href="#" target="_blank"><i class="fab fa-github"></i></a></li>
-                    <li><a class="twitter" aria-label="Twitter" href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                    <li><a class="telegram" aria-label="Telegram" href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-                    <li><a class="instagram" aria-label="Instagram" href="#"><i class="fab fa-instagram" target="_blank"></i></a></li>
+                    <li><a class="linkedin" aria-label="LinkedIn" href="#" target="_blank"><i class="fab fa-linkedin" style="margin-top:10px;"></i></a></li>
+                    <li><a class="github" aria-label="GitHub" href="#" target="_blank"><i class="fab fa-github" style="margin-top: 10px;"></i></a></li>
+                    <li><a class="twitter" aria-label="Twitter" href="#" target="_blank"><i class="fab fa-twitter" style="margin-top: 10px;"></i></a></li>
+                    <li><a class="telegram" aria-label="Telegram" href="#" target="_blank"><i class="fab fa-telegram-plane" style="margin-top: 10px;"></i></a></li>
+                    <li><a class="instagram" aria-label="Instagram" href="#"><i class="fab fa-instagram" target="_blank" style="margin-top: 10px;"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -467,4 +467,5 @@
     <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
     <script src="js/script.js"></script>
 </body>
+
 </html>
